# rust-firmware

./: .gitignore  .travis.yml  404.html  Cargo.toml  LICENSE  README.md  index.html  intro.html  openocd.gdb  print.html  resources.html  runner.py  searchindex.js  searchindex.json
.cargo/: config
doc/: README.md  book.toml
doc/datasheets/: download_datasheets.sh
doc/src/: SUMMARY.md  intro.md  resources.md  roadmap.md
doc/src/prototyping/: prototyping.md
doc/src/prototyping/tooling/: macosx.md
examples/: buttons_and_leds.rs  muchos_blinkos.rs  muchos_c_fn_interruptos.rs  muchos_timeros.rs
examples/interrupts/: Cargo.toml  build.rs  interrupthandlers.c
firmware/: Cargo.toml
firmware/.cargo/: config
firmware/src/: main.rs
hal/: Cargo.toml
hal/src/: gpio.rs  io.rs  lib.rs  uart.rs
nordic/: Cargo.toml
nordic/src/: lib.rs  nrf52840.rs  nrf52840dk.rs
nordic/src/nrf52/nrf52840/: mod.rs
prototype/: Cargo.toml  README.md  runner.py
prototype/examples/: blinking_led_raw.rs  leds_and_buttons.rs  uart_echo_service.rs  uart_hello_world.rs  uart_loopback.rs
prototype/examples/interrupts/: device.x
prototype/src/: main.rs
prototyping/: prototyping.html
prototyping/tooling/: linux.html  macosx.html
src/: SUMMARY.md  chapter_1.md  getting_started.md  intro.md  lib.rs  main.rs  prototyping.md  registers.rs
src/prototyping/tooling/: linux.md  macosx.md
yak/: Cargo.toml
yak/src/: lib.rs  registers.rs
