[package]
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rust-firmware"
version = "0.1.0"

[build-dependencies]
cc = "1.0"

[dependencies]
cortex-m = "0.5.8"
#cortex-m-rt = "0.6.5"
panic-halt = "0.2.0"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# [dependencies.stm32f30x]
# features = ["rt"]
# version = "0.7.1"

[features]
default = ["device"]
device = []

[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.5"

# this lets you use `cargo fix`!
[[bin]]
name = "rust-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
